--- a/app/views/pages/_leave_review.html.erb
+++ b/app/views/pages/_leave_review.html.erb
@@ -2,7 +2,7 @@
   <div class="container text-center">
     <div class="call-to-action">
       <h2>Had a good experience?</h2>
-      <a href="#">Leave me a review!</a>
+      <a href="#" class="btn btn-default btn-xl sr-button">Leave me a review!</a>
     </div>
   </div>
 </aside>
