Change icons in services section

--- a/app/views/pages/_services.html.erb
+++ b/app/views/pages/_services.html.erb
@@ -7,28 +7,28 @@
       </div>
       <div class="col-lg-3 col-md-6 text-center">
         <div class="service-box">
-          <i class="fa fa-4x fa-tablet text-primary sr-icons"></i>
+          <i class="fa fa-4x fa-scissors text-primary sr-icons"></i>
           <h3>Sample Skill</h3>
           <p class="text-muted">Sample description of skill. </p>
         </div>
       </div>
       <div class="col-lg-3 col-md-6 text-center">
         <div class="service-box">
-          <i class="fa fa-4x fa-apple text-primary sr-icons"></i>
+          <i class="fa fa-4x fa-suitcase text-primary sr-icons"></i>
           <h3>Sample Skill</h3>
           <p class="text-muted">Sample description of skill.</p>
         </div>
       </div>
       <div class="col-lg-3 col-md-6 text-center">
         <div class="service-box">
-          <i class="fa fa-4x fa-android text-primary sr-icons"></i>
+          <i class="fa fa-4x fa-clock-o text-primary sr-icons"></i>
           <h3>Sample Skill</h3>
           <p class="text-muted">Sample description of skill.</p>
         </div>
       </div>
       <div class="col-lg-3 col-md-6 text-center">
         <div class="service-box">
-          <i class="fa fa-4x fa-heart text-primary sr-icons"></i>
+          <i class="fa fa-4x fa-smile-o text-primary sr-icons"></i>
           <h3>Sample Skill</h3>
           <p class="text-muted">Sample description of skill.</p>
         </div>
