--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body>
+  <body id="page-top">
   	<%= render "layouts/navbar" %>
     <%= yield %>
     <%= javascript_include_tag 'application' %>
