--- a/app/views/pages/_contact.html.erb
+++ b/app/views/pages/_contact.html.erb
@@ -2,10 +2,10 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-8 col-lg-offset-2 text-center">
-        <h2 class="section-heading">Let's Get In Touch!</h2>
+        <h2 class="section-heading">Need a Haircut?</h2>
         <hr class="primary">
 
-        <p>Hit me up for a Haircut</p>
+        <p>Hit me up</p>
         <br>
       </div>
       <div class="information">
