Change _leave_review file to _instagram file, button links to instagram page

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,6 +2,6 @@
 <%= render 'pages/about' %>
 <%= render 'pages/services' %>
 <%= render 'pages/portfolio' %>
-<%= render 'pages/leave_review' %>
+<%= render 'pages/instagram' %>
 <%= render 'pages/contact' %>
 <%= render 'pages/footer' %>
