--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -16,7 +16,7 @@
           <a class="page-scroll" href="#services">Services</a>
         </li>
         <li>
-          <a class="page-scroll" href="#reviews">Reviews</a>
+          <a class="page-scroll" href="#portfolio">Portfolio</a>
         </li>
         <li>
           <a class="page-scroll" href="#contact">Contact</a>
