Add images in portfolio section

--- a/app/views/pages/_header.html.erb
+++ b/app/views/pages/_header.html.erb
@@ -3,7 +3,7 @@
     <div class="header-content-inner">
       <h1 id="homeHeading" class="outline">Erwin the Barber</h1>
       <hr>
-      <p class="outline">Quality Haircuts</p>
+      <p class="outline">Quality Haircuts & Positive Vibes</p>
       <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
     </div>
   </div>
