--- a/app/views/pages/_portfolio.html.erb
+++ b/app/views/pages/_portfolio.html.erb
@@ -2,8 +2,8 @@
         <div class="container-fluid">
             <div class="row no-gutter popup-gallery">
                 <div class="col-lg-4 col-sm-6">
-                    <a href="<%= image_path('header.jpg') %>" class="portfolio-box">
-                       <%= image_tag("header.jpg", :class => "img_responsive") %>
+                    <a href="<%= image_path('haircut1.jpg') %>" class="portfolio-box">
+                       <%= image_tag("haircut1.jpg", :class => "img_responsive") %>
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
@@ -17,8 +17,8 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="<%= image_path('header.jpg') %>" class="portfolio-box">
-                       <%= image_tag("header.jpg", :class => "img_responsive") %>
+                    <a href="<%= image_path('haircut2.jpg') %>" class="portfolio-box">
+                       <%= image_tag("haircut2.jpg", :class => "img_responsive") %>
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
@@ -32,8 +32,8 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="<%= image_path('header.jpg') %>" class="portfolio-box">
-                       <%= image_tag("header.jpg", :class => "img_responsive") %>
+                    <a href="<%= image_path('haircut3.jpg') %>" class="portfolio-box">
+                       <%= image_tag("haircut3.jpg", :class => "img_responsive") %>
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
@@ -47,8 +47,8 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="<%= image_path('header.jpg') %>" class="portfolio-box">
-                       <%= image_tag("header.jpg", :class => "img_responsive") %>
+                    <a href="<%= image_path('haircut4.jpg') %>" class="portfolio-box">
+                       <%= image_tag("haircut4.jpg", :class => "img_responsive") %>
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
@@ -62,8 +62,8 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="<%= image_path('header.jpg') %>" class="portfolio-box">
-                       <%= image_tag("header.jpg", :class => "img_responsive") %>
+                    <a href="<%= image_path('haircut5.jpg') %>" class="portfolio-box">
+                       <%= image_tag("haircut5.jpg", :class => "img_responsive") %>
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
@@ -77,8 +77,8 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="<%= image_path('header.jpg') %>" class="portfolio-box">
-                       <%= image_tag("header.jpg", :class => "img_responsive") %>
+                    <a href="<%= image_path('haircut6.jpg') %>" class="portfolio-box">
+                       <%= image_tag("haircut6.jpg", :class => "img_responsive") %>
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
