--- a/app/views/pages/_contact.html.erb
+++ b/app/views/pages/_contact.html.erb
@@ -8,19 +8,20 @@
         <p>Hit me up</p>
         <br>
       </div>
-      <div class="information">
-        <div class="contact-info text-center">
-          <i class="fa fa-phone fa-3x sr-contact"></i>
-          <p>(XXX)-XXX-XXXX</p>
-        </div>
-        <div class="contact-info text-center">
-          <i class="fa fa-map-marker fa-3x sr-contact"></i>
-          <p>ADDRESS <br>CITY, CA ZIPCODE</p>
-        </div>
-        <div class="contact-info text-center">
-          <i class="fa fa-envelope-o fa-3x sr-contact"></i>
-          <p><a href="mailto:SAMPLE@EMAIL.COM">SAMPLE@EMAIL.COM</a></p>
-        </div>
+    </div>
+
+    <div class="row text-center">
+      <div class="col-md-4">
+        <i class="fa fa-phone fa-3x sr-contact"></i>
+        <p>(XXX)-XXX-XXXX</p>
+      </div>
+      <div class="col-md-4">
+        <i class="fa fa-map-marker fa-3x sr-contact"></i>
+        <p>ADDRESS <br>CITY, CA ZIPCODE</p>
+      </div>
+      <div class="col-md-4">
+        <i class="fa fa-envelope-o fa-3x sr-contact"></i>
+        <p><a href="mailto:SAMPLE@EMAIL.COM">SAMPLE@EMAIL.COM</a></p>
       </div>
     </div>
   </div>
