--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,7 @@
 <%= render 'pages/header' %>
 <%= render 'pages/about' %>
 <%= render 'pages/services' %>
-<%= render 'pages/portfolio' %>
+<%= render 'pages/portfolio_preview' %>
 <%= render 'pages/instagram' %>
 <%= render 'pages/contact' %>
 <%= render 'pages/footer' %>
