Implement index page, create haircut partial, update navbar, fix indentation in portfolio preview partial

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -10,13 +10,10 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
         <li>
-          <a class="page-scroll" href="#about">About</a>
+          <a href="/">Home</a>
         </li>
         <li>
-          <a class="page-scroll" href="#services">Services</a>
-        </li>
-        <li>
-          <a class="page-scroll" href="#portfolio">Portfolio</a>
+          <a href="/haircuts">Portfolio</a>
         </li>
         <li>
           <a class="page-scroll" href="#contact">Contact</a>
