--- a/app/assets/stylesheets/creative.css
+++ b/app/assets/stylesheets/creative.css
@@ -463,3 +463,11 @@ ul.footer-icons {
 .input-text {
   color: black;
 }
+
+.show-page {
+  background-color: white;
+  color: black;
+  border-radius: 15px;
+  opacity: 0.9;
+  width: 50%;
+}
