--- a/app/views/haircuts/_haircut.html.erb
+++ b/app/views/haircuts/_haircut.html.erb
@@ -1,4 +1,12 @@
 <div class="text-center">
 	<h2><%= haircut.name %></h2>
 	<p><%= haircut.description %></p>
+	<div class="row no-gutter popup-gallery">
+		<%= render haircut.pics %>
+	</div>
+	<p>
+	  <%= link_to 'Edit', edit_haircut_path(haircut) %> |
+	  <%= link_to 'Delete', haircut_path(haircut), :method => :delete, 
+	    data: {confirm: "Are you sure you want to delete this haircut?"} %>
+	</p>
 </div>
