--- a/app/views/haircuts/_haircut.html.erb
+++ b/app/views/haircuts/_haircut.html.erb
@@ -7,6 +7,7 @@
 	<p>
 	  <%= link_to 'Edit', edit_haircut_path(haircut) %> |
 	  <%= link_to 'Delete', haircut_path(haircut), :method => :delete, 
-	    data: {confirm: "Are you sure you want to delete this haircut?"} %>
+	    data: {confirm: "Are you sure you want to delete this haircut?"} %> |
+	  <%= link_to 'New Pic', new_haircut_pic_path(haircut) %>
 	</p>
 </div>
