Fix bugs to make adding, editing, and deleting pics fully functional

--- a/app/views/pics/_form.html.erb
+++ b/app/views/pics/_form.html.erb
@@ -1,5 +1,5 @@
 <div class="outline">	
-	<%= form_for [haircut, haircut.pics.build] do |f| %>
+	<%= form_for [haircut, pic] do |f| %>
 	  <p> 
 	    <%= f.label :title %><br>
 	    <%= f.text_field :title, :class => "input-text" %>
