--- a/app/views/pics/edit.html.erb
+++ b/app/views/pics/edit.html.erb
@@ -1,6 +1,6 @@
 <header>
 	<div class="header-content">	
 		<h1 class="outline">Edit Pic for <%= @haircut.name %></h1>
-		<%= render partial: "form", locals: {haircut: @haircut} %>
+		<%= render partial: "form", locals: {haircut: @haircut, pic: @pic} %>
 	</div>
 </header>
