--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -18,6 +18,11 @@
         <li>
           <a class="page-scroll" href="#contact">Contact</a>
         </li>
+        <% if admin_signed_in? %>
+          <li>
+            <%= link_to "Logout", destroy_admin_session_path, :method => :delete %>
+          </li>
+        <% end %>
       </ul>
     </div>
   </div>
