Implement user authentication in order to create, edit, or destroy any pics or haircuts.  User auth required to view new and edit pages, will be redirected to login page

--- a/app/views/pics/_pic.html.erb
+++ b/app/views/pics/_pic.html.erb
@@ -12,8 +12,10 @@
       </div>
     </div>
   </a>
-  <br>
-<%= link_to 'Edit Pic', edit_haircut_pic_path(pic.haircut, pic), :method => :get %> |
-<%= link_to 'Delete Pic', haircut_pic_path(pic.haircut, pic), :method => :delete, 
-  data: {confirm: "Are you sure you want to delete this pic?"} %>
+  <% if admin_signed_in? %>    
+    <br>
+    <%= link_to 'Edit Pic', edit_haircut_pic_path(pic.haircut, pic), :method => :get %> |
+    <%= link_to 'Delete Pic', haircut_pic_path(pic.haircut, pic), :method => :delete, 
+      data: {confirm: "Are you sure you want to delete this pic?"} %>
+  <% end %>
 </div>
