--- a/app/views/haircuts/_haircut.html.erb
+++ b/app/views/haircuts/_haircut.html.erb
@@ -4,10 +4,12 @@
 	<div class="row no-gutter popup-gallery">
 		<%= render haircut.pics %>
 	</div>
-	<p>
-	  <%= link_to 'Edit', edit_haircut_path(haircut) %> |
-	  <%= link_to 'Delete', haircut_path(haircut), :method => :delete, 
-	    data: {confirm: "Are you sure you want to delete this haircut?"} %> |
-	  <%= link_to 'New Pic', new_haircut_pic_path(haircut) %>
-	</p>
+	<% if admin_signed_in? %>
+		<p>
+		  <%= link_to 'Edit', edit_haircut_path(haircut) %> |
+		  <%= link_to 'Delete', haircut_path(haircut), :method => :delete, 
+		    data: {confirm: "Are you sure you want to delete this haircut?"} %> |
+		  <%= link_to 'New Pic', new_haircut_pic_path(haircut) %>
+		</p>
+	<% end %>
 </div>
