Add new haircut option in navbar if logged in, only display contact option if on homepage in navbar. Style css for every other haircut in portfolio page

--- a/app/views/haircuts/index.html.erb
+++ b/app/views/haircuts/index.html.erb
@@ -10,5 +10,15 @@
 </header>
 
 <div id="haircuts">
-	<%= render @haircuts %>
+	<% @haircuts.each_with_index do |haircut, i| %>
+		<% if i % 2 == 0 %>
+			<section>
+				<%= render haircut %>
+			</section>
+		<% else %>
+			<section class="bg-dark">
+				<%= render haircut %>
+			</section>
+		<% end %>
+	<% end %>
 </div>
