--- a/app/views/haircuts/_haircut.html.erb
+++ b/app/views/haircuts/_haircut.html.erb
@@ -1,4 +1,4 @@
-<div class="text-center">
+<div class="container text-center">
 	<h2><%= haircut.name %></h2>
 	<p><%= haircut.description %></p>
 	<div class="row no-gutter popup-gallery">
