--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -15,10 +15,15 @@
         <li>
           <a href="/haircuts">Portfolio</a>
         </li>
-        <li>
-          <a class="page-scroll" href="#contact">Contact</a>
-        </li>
+        <% if @page == "home" %>
+          <li>
+            <a class="page-scroll" href="#contact">Contact</a>
+          </li>
+        <% end %>
         <% if admin_signed_in? %>
+          <li>
+            <%= link_to "New Haircut", new_haircut_path %>
+          </li>
           <li>
             <%= link_to "Logout", destroy_admin_session_path, :method => :delete %>
           </li>
