Add functionality to facebook and instagram icon links

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -2,11 +2,11 @@
   <div class="col-lg-8text-center">
     <ul class="footer-icons">
       <li class="icon">
-        <a href="#"><%= image_tag("facebook.png") %></a>
+        <a href="https://www.facebook.com/erwin.balanon.7"><%= image_tag("facebook.png") %></a>
       </li>
 
       <li class="icon" >
-        <a href="#"><%= image_tag("instagram.png") %></a>
+        <a href="https://www.instagram.com/erwinthebarber/?hl=en"><%= image_tag("instagram.png") %></a>
       </li>
     </ul>
     <p class="copyright">© 2017 Erwin the Barber</p>
