--- a/app/views/pages/_contact.html.erb
+++ b/app/views/pages/_contact.html.erb
@@ -13,7 +13,7 @@
     <div class="row text-center">
       <div class="col-md-4">
         <i class="fa fa-phone fa-3x sr-contact"></i>
-        <p>(XXX)-XXX-XXXX</p>
+        <p>(XXX) XXX-XXXX</p>
       </div>
       <div class="col-md-4">
         <i class="fa fa-map-marker fa-3x sr-contact"></i>
