Update contact information

--- a/app/views/pages/_contact.html.erb
+++ b/app/views/pages/_contact.html.erb
@@ -13,15 +13,15 @@
     <div class="row text-center">
       <div class="col-md-4">
         <i class="fa fa-phone fa-3x sr-contact"></i>
-        <p>(XXX) XXX-XXXX</p>
+        <p>(209) 298-2804</p>
       </div>
       <div class="col-md-4">
         <i class="fa fa-map-marker fa-3x sr-contact"></i>
-        <p>ADDRESS <br>CITY, CA ZIPCODE</p>
+        <p>I am located in <br>Stockton, CA</p>
       </div>
       <div class="col-md-4">
         <i class="fa fa-envelope-o fa-3x sr-contact"></i>
-        <p><a href="mailto:SAMPLE@EMAIL.COM">SAMPLE@EMAIL.COM</a></p>
+        <p><a href="mailto:SAMPLE@EMAIL.COM">balanon67@gmail.com</a></p>
       </div>
     </div>
   </div>
