--- a/app/views/pages/_services.html.erb
+++ b/app/views/pages/_services.html.erb
@@ -2,35 +2,35 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-12 text-center">
-        <h2 class="section-heading">What I can do</h2>
+        <h2 class="section-heading">How I work</h2>
         <hr class="primary">
       </div>
       <div class="col-lg-3 col-md-6 text-center">
         <div class="service-box">
           <i class="fa fa-4x fa-scissors text-primary sr-icons"></i>
-          <h3>Sample Skill</h3>
-          <p class="text-muted">Sample description of skill. </p>
+          <h3>Skills</h3>
+          <p class="text-muted">I cut both men and women's hair, facial hair, designs, fades and more.  If you have a specific haircut in mind, ask me and I'll let you know what I can do</p>
         </div>
       </div>
       <div class="col-lg-3 col-md-6 text-center">
         <div class="service-box">
           <i class="fa fa-4x fa-suitcase text-primary sr-icons"></i>
-          <h3>Sample Skill</h3>
-          <p class="text-muted">Sample description of skill.</p>
+          <h3>Tools</h3>
+          <p class="text-muted">I only use quality tools and I thoroughly clean them after every haircut.  I believe in using clean and quality tools and treat every haircut with care.</p>
         </div>
       </div>
       <div class="col-lg-3 col-md-6 text-center">
         <div class="service-box">
           <i class="fa fa-4x fa-clock-o text-primary sr-icons"></i>
-          <h3>Sample Skill</h3>
-          <p class="text-muted">Sample description of skill.</p>
+          <h3>Time</h3>
+          <p class="text-muted">My haircuts are well-timed, they are relatively fast but I do take my time to make sure that it is a high quality haircut</p>
         </div>
       </div>
       <div class="col-lg-3 col-md-6 text-center">
         <div class="service-box">
           <i class="fa fa-4x fa-smile-o text-primary sr-icons"></i>
-          <h3>Sample Skill</h3>
-          <p class="text-muted">Sample description of skill.</p>
+          <h3>Customers</h3>
+          <p class="text-muted">I am more than just your barber, I am your friend.  I value my customers and I enjoy getting to know them while doing my job.</p>
         </div>
       </div>
     </div>
