Update about section

--- a/app/views/pages/_about.html.erb
+++ b/app/views/pages/_about.html.erb
@@ -2,9 +2,9 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-8 col-lg-offset-2 text-center">
-        <h2 class="section-heading">Add mission description here</h2>
+        <h2 class="section-heading">About Me</h2>
         <hr class="light">
-        <p class="text-faded">Add detailed description here</p>
+        <p class="text-faded">I am a barber who started in my garage and slowly working my way up.  I am now going to barber school and I am very passionate about cutting hair.  Not only is cutting hair my art, but I love making people feel better about themselves.  I believe that a good confidence boost starts with a fresh haircut and I notice the difference in attitude when a person receives a new haircut.  My goal is to make sure you leave happy and feeling good.  Hit me up to make an appointment.</p>
         <a href="#services" class="page-scroll btn btn-default btn-xl sr-button">Get Started!</a>
       </div>
     </div>
