Replace static text with model values in views

--- a/app/views/haircuts/index.html.erb
+++ b/app/views/haircuts/index.html.erb
@@ -1,9 +1,9 @@
 <header>
   <div class="header-content">
     <div class="header-content-inner">
-      <h1 id="homeHeading" class="outline">Portfolio</h1>
+      <h1 id="homeHeading" class="outline"><%= haircuts_desc.title %></h1>
       <hr>
-      <p class="outline">Haircuts I have done</p>
+      <p class="outline"><%= haircuts_desc.body %></p>
       <a href="#haircuts" class="btn btn-primary btn-xl page-scroll">See Haircuts</a>
     </div>
   </div>
