--- a/app/views/pages/_contact.html.erb
+++ b/app/views/pages/_contact.html.erb
@@ -2,10 +2,9 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-8 col-lg-offset-2 text-center">
-        <h2 class="section-heading">Need a Haircut?</h2>
+        <h2 class="section-heading"><%= contact_desc.title %></h2>
         <hr class="primary">
-
-        <p>Hit me up</p>
+        <p><%= contact_desc.body %></p>
         <br>
       </div>
     </div>
