--- a/app/views/pages/_instagram.html.erb
+++ b/app/views/pages/_instagram.html.erb
@@ -1,8 +1,8 @@
 <aside class="bg-dark">
   <div class="container text-center">
     <div class="call-to-action">
-      <h2>Want to see more?</h2>
-      <a href="https://www.instagram.com/erwinthebarber/?hl=en" class="btn btn-default btn-xl sr-button">Visit my Instagram</a>
+      <h2><%= instagram_desc.title %></h2>
+      <a href="https://www.instagram.com/erwinthebarber/?hl=en" class="btn btn-default btn-xl sr-button"><%= instagram_desc.body %></a>
     </div>
   </div>
 </aside>
