--- a/app/views/pages/_services.html.erb
+++ b/app/views/pages/_services.html.erb
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-12 text-center">
-        <h2 class="section-heading">How I work</h2>
+        <h2 class="section-heading"><%= services_desc.title %></h2>
         <hr class="primary">
       </div>
       <div class="col-lg-3 col-md-6 text-center">
