--- a/app/views/pages/_about.html.erb
+++ b/app/views/pages/_about.html.erb
@@ -2,9 +2,9 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-8 col-lg-offset-2 text-center">
-        <h2 class="section-heading">about_desc.title</h2>
+        <h2 class="section-heading"><%= about_desc.title %></h2>
         <hr class="light">
-        <p class="text-faded">about_desc.body</p>
+        <p class="text-faded"><%= about_desc.body %></p>
         <a href="#services" class="page-scroll btn btn-default btn-xl sr-button">Get Started!</a>
       </div>
     </div>
