--- a/app/views/pages/_header.html.erb
+++ b/app/views/pages/_header.html.erb
@@ -1,9 +1,9 @@
 <header>
   <div class="header-content">
     <div class="header-content-inner">
-      <h1 id="homeHeading" class="outline">Erwin the Barber</h1>
+      <h1 id="homeHeading" class="outline"><%= header_desc.title %></h1>
       <hr>
-      <p class="outline">Quality Haircuts & Positive Vibes</p>
+      <p class="outline"><%= header_desc.body %></p>
       <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
     </div>
   </div>
