--- a/app/views/pages/_portfolio_preview.html.erb
+++ b/app/views/pages/_portfolio_preview.html.erb
@@ -2,7 +2,7 @@
   <div class="container-fluid">
     <div class="row">
       <div class="col-lg-8 col-lg-offset-2 text-center">
-        <h2 class="section-heading">Portfolio</h2>
+        <h2 class="section-heading"><%= portfolio_desc.title %></h2>
         <hr class="primary">
         <br>
       </div>
