Replace button static texts to model attributes

--- a/app/views/haircuts/index.html.erb
+++ b/app/views/haircuts/index.html.erb
@@ -4,7 +4,7 @@
       <h1 id="homeHeading" class="outline"><%= haircuts_desc.title %></h1>
       <hr>
       <p class="outline"><%= haircuts_desc.body %></p>
-      <a href="#haircuts" class="btn btn-primary btn-xl page-scroll">See Haircuts</a>
+      <a href="#haircuts" class="btn btn-primary btn-xl page-scroll"><%= haircut_btn.body %></a>
     </div>
   </div>
 </header>
