--- a/app/views/pages/_header.html.erb
+++ b/app/views/pages/_header.html.erb
@@ -4,7 +4,7 @@
       <h1 id="homeHeading" class="outline"><%= header_desc.title %></h1>
       <hr>
       <p class="outline"><%= header_desc.body %></p>
-      <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
+      <a href="#about" class="btn btn-primary btn-xl page-scroll"><%= header_btn.body %></a>
     </div>
   </div>
 </header>
