--- a/app/views/pages/_instagram.html.erb
+++ b/app/views/pages/_instagram.html.erb
@@ -2,7 +2,7 @@
   <div class="container text-center">
     <div class="call-to-action">
       <h2><%= instagram_desc.title %></h2>
-      <a href="https://www.instagram.com/erwinthebarber/?hl=en" class="btn btn-default btn-xl sr-button"><%= instagram_desc.body %></a>
+      <a href="https://www.instagram.com/erwinthebarber/?hl=en" class="btn btn-default btn-xl sr-button"><%= instagram_btn.body %></a>
     </div>
   </div>
 </aside>
