--- a/app/views/pages/_about.html.erb
+++ b/app/views/pages/_about.html.erb
@@ -5,7 +5,7 @@
         <h2 class="section-heading"><%= about_desc.title %></h2>
         <hr class="light">
         <p class="text-faded"><%= about_desc.body %></p>
-        <a href="#services" class="page-scroll btn btn-default btn-xl sr-button">Get Started!</a>
+        <a href="#services" class="page-scroll btn btn-default btn-xl sr-button"><%= about_btn.body %></a>
       </div>
     </div>
   </div>
