Update about partial to allow logged in user to edit information

--- a/app/views/pages/_about.html.erb
+++ b/app/views/pages/_about.html.erb
@@ -5,7 +5,18 @@
         <h2 class="section-heading"><%= about_desc.title %></h2>
         <hr class="light">
         <p class="text-faded"><%= about_desc.body %></p>
+
+        <% if admin_signed_in? %>    
+          <br>
+          <%= link_to 'Edit About', edit_about_path(about_desc), :method => :get %> |
+        <% end %>
+
         <a href="#services" class="page-scroll btn btn-default btn-xl sr-button"><%= about_btn.body %></a>
+        <% if admin_signed_in? %>    
+          <br>
+          <%= link_to 'Edit About Button', edit_button_path(about_btn), :method => :get %> |
+        <% end %>
+
       </div>
     </div>
   </div>
