--- a/app/views/pages/_portfolio_preview.html.erb
+++ b/app/views/pages/_portfolio_preview.html.erb
@@ -7,7 +7,7 @@
         <hr class="primary">
         <% if admin_signed_in? %>    
           <br>
-          <%= link_to 'Edit Portfolio', edit_description_path(portfolio_desc), :method => :get %> |
+          <%= link_to 'Edit Portfolio', edit_description_path(portfolio_desc), :method => :get %>
         <% end %>
         <br>
 
