--- a/app/views/pages/_services.html.erb
+++ b/app/views/pages/_services.html.erb
@@ -7,7 +7,7 @@
         <hr class="primary">
         <% if admin_signed_in? %>    
 	        <br>
-	        <%= link_to 'Edit Service', edit_description_path(services_desc), :method => :get %> |
+	        <%= link_to 'Edit Service', edit_description_path(services_desc), :method => :get %>
 	      <% end %>
 
       </div>
