--- a/app/views/haircuts/index.html.erb
+++ b/app/views/haircuts/index.html.erb
@@ -4,16 +4,18 @@
 
       <h1 id="homeHeading" class="outline"><%= haircuts_desc.title %></h1>
       <hr>
-      <% if admin_signed_in? %>    
-        <br>
-        <%= link_to 'Edit Haircut Header', edit_description_path(haircuts_desc), :method => :get %> |
-      <% end %>
+      <p class="outline">
+        <%= haircuts_desc.body %>
+        <% if admin_signed_in? %>    
+          <br>
+          <%= link_to 'Edit Haircut Header', edit_description_path(haircuts_desc), :method => :get %>
+        <% end %>
+      </p>
 
-      <p class="outline"><%= haircuts_desc.body %></p>
       <a href="#haircuts" class="btn btn-primary btn-xl page-scroll"><%= haircut_btn.body %></a>
       <% if admin_signed_in? %>    
         <br>
-        <%= link_to 'Edit Haircut Button', edit_button_path(haircut_btn), :method => :get %> |
+        <%= link_to 'Edit Haircut Button', edit_button_path(haircut_btn), :method => :get %>
       <% end %>
 
     </div>
