Update form for pic to implement paperclip

--- a/app/views/pics/_form.html.erb
+++ b/app/views/pics/_form.html.erb
@@ -1,5 +1,10 @@
 <div class="outline">	
 	<%= form_for [haircut, pic] do |f| %>
+
+		<p>
+    	<%= f.file_field :image, :class => "input-file" %>
+		</p>
+
 	  <p> 
 	    <%= f.label :title %><br>
 	    <%= f.text_field :title, :class => "input-text" %>
@@ -8,11 +13,6 @@
 	  <p>   
 	    <%= f.label :body %><br>
 	    <%= f.text_area :body, :class => "input-text"  %>
-	  </p>
-
-	  <p> 
-	    <%= f.label :url %><br>
-	    <%= f.text_field :url, :class => "input-text" %>
 	  </p>
 
 	  <%= f.hidden_field :haircut_id, value: haircut.id %>
