--- a/app/views/pics/_form.html.erb
+++ b/app/views/pics/_form.html.erb
@@ -1,3 +1,9 @@
+<% if @errors %>
+	<% @errors.each do |message| %>
+		<%= message %>
+	<% end %>
+<% end %>
+
 <div class="outline">	
 	<%= form_for [haircut, pic] do |f| %>
 
