--- a/app/assets/stylesheets/creative.css.scss
+++ b/app/assets/stylesheets/creative.css.scss
@@ -158,7 +158,8 @@ header {
   background-size: cover;
   -o-background-size: cover;
   background-position: center;
-  background-image:image-url('header.jpg');
+  /*background-image: url(header.jpg);*/
+  background-image: asset-data-url("header.jpg")
   text-align: center;
   color: white;
 }
