Add link to booking in navbar

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -20,6 +20,9 @@
             <a class="page-scroll" href="#contact">Contact</a>
           </li>
         <% end %>
+        <li>
+          <a href="/booking">Booking</a>
+        </li>
         <% if admin_signed_in? %>
           <li>
             <%= link_to "New Haircut", new_haircut_path %>
