Fix booking page

--- a/app/views/pages/booking.html.erb
+++ b/app/views/pages/booking.html.erb
@@ -1,1 +1,3 @@
-<embed class="booking" src="https://www.gopanache.com/pro/erwinthebarber" />
+<div class="booking">
+	<iframe src="https://www.gopanache.com/pro/erwinthebarber"></iframe>
+</div>
