--- a/app/assets/stylesheets/creative.css.erb
+++ b/app/assets/stylesheets/creative.css.erb
@@ -482,10 +482,32 @@ ul.footer-icons {
   margin: 0 auto;
 }
 
-.booking {
+/*.booking {
   background-color: black;
   width: 100%;
   height: 100%;
   padding-top: 50px;
+  -webkit-overflow-scrolling: touch;
+  overflow-y: scroll;
+  position: absolute;
+}*/
+
+
+.booking {
+  position: absolute;
+  right: 0; 
+  bottom: 0; 
+  left: 0;
+  top: 0;
+  -webkit-overflow-scrolling: touch;
+  overflow: auto;
+  height: 100%;
+  width: 100%;
+}
+
+.booking iframe {
+  display: block;
+  height: 100%;
+  width: 100%;
 }
 
