--- a/app/assets/stylesheets/creative.css.erb
+++ b/app/assets/stylesheets/creative.css.erb
@@ -496,7 +496,7 @@ ul.footer-icons {
 .booking {
   background-color: black;
   padding-top: 50px;
-  position: absolute;
+  position: fixed;
   right: 0; 
   bottom: 0; 
   left: 0;
