--- a/app/views/pages/booking.html.erb
+++ b/app/views/pages/booking.html.erb
@@ -1,3 +1,3 @@
 <div class="booking">
-	<iframe src="https://www.gopanache.com/pro/erwinthebarber"></iframe>
+	<iframe onload="window.parent.scrollTo(0,630)" allowtransparency="true" src="https://www.gopanache.com/pro/erwinthebarber?nojump" frameborder="0" style="width:100%; min-height:100%; border:none;" scrolling="no"></iframe>
 </div>
