--- a/app/assets/stylesheets/creative.css.erb
+++ b/app/assets/stylesheets/creative.css.erb
@@ -482,3 +482,15 @@ ul.footer-icons {
   margin: 0 auto;
 }
 
+.booking {
+  width: 100%;
+  height: 100%;
+  padding-top: 55px;
+  background-color: black
+}
+
+.booking iframe {
+  width: 100%;
+  height: 100%;
+}
+
