Add button to theCut page, and update navbar to link back to home page

--- a/app/assets/stylesheets/creative.css.erb
+++ b/app/assets/stylesheets/creative.css.erb
@@ -486,7 +486,11 @@ ul.footer-icons {
   width: 100%;
   height: 100%;
   padding-top: 55px;
-  background-color: black
+  background-color: black;
+  text-align: center;
+}
+.booking a {
+  margin: 10px;
 }
 
 .booking iframe {
