--- a/app/views/pages/booking.html.erb
+++ b/app/views/pages/booking.html.erb
@@ -1,3 +1,4 @@
 <div class="booking">
+	<a href="https://book.thecut.co/ErwintheBarber1" class="btn btn-default btn-xl sr-button">ErwintheBarber1</a>
 	<iframe src="https://www.thecut.co/download?nojump" ></iframe>
 </div>
