--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -4,7 +4,12 @@
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
         <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
       </button>
-      <a class="navbar-brand page-scroll" href="#page-top">Erwin the Barber</a>
+      <% if @page == "home" %>
+        <a class="navbar-brand page-scroll" href="#page-top">Erwin the Barber</a>
+      <% else %>
+        <a class="navbar-brand page-scroll" href="/">Erwin the Barber</a>
+      <% end %>
+      
     </div>
 
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
